# date-fruit-classification-resnet50-and-customCNN

./: .gitattributes  .gitignore  README.md  app.py  conda_config_cmds.txt  custom_model.ipynb  index.html  main.ipynb  main.py  pyproject.toml  requirements-demo-cpu.txt  requirements-dev.txt
checkpoints/: best_custom_cnn.pt  best_resnet50_finetuned.pt  best_resnet50_frozen.pt
kaggle/: DATASET_CARD.md  dataset-metadata.json
reports/: classification_metrics_test.csv  misclassified_test_images.csv
scripts/: create_kaggle_split_manifest.py
